<resources>
    <string name="app_name">SaveTime</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="registration_ok_button_text">@string/button_ok</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Здесь будут какие-то заказы в виде списка</string>
    <string name="title_activity_scrolling">Выбор блюда</string>
    <string name="order_activity_label">Orders</string>
    <string name="search">Search</string>
    <string name="orders_tab_new">New</string>
    <string name="orders_tab_done">Done</string>
    <string name="orders_tab_not_payed">Not payed</string>
    <string name="price_format">%.2f r.</string>
    <string name="order_activity_title">№ %d</string>
    <string name="order_activity_delimeter"> Additional info</string>
    <string name="order_activity_dishes_delimeter">Dishes</string>
    <string name="title_activity_order_creating">New order</string>
    <string name="next">Next</string>
    <string name="title_activity_order_finishing">New order</string>
    <string name="phone_hint">Phone number</string>
    <string name="comment_hint">Comment</string>
    <string name="pass_hint">Password</string>
    <string name="order_summary">Summary: %d r.</string>
    <string name="create">Create order</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="switch_stop">Stop online orders</string>
    <string name="switch_stoped">Online orders stoped</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="done">Delivered</string>
    <string name="cooked">Cooked</string>
    <string name="gone_to_cook">Gone to cook</string>
    <string name="newOrder">Новый</string>
    <string name="cooking">Готовится</string>
    <string name="cooked_short">Готов</string>
    <string name="are_you_sure">Заказ отмечен готовым</string>
    <string name="cancel_action">Отменить</string>
    <string name="cook_action">В готовку</string>
    <string name="ready_action">Приготовлено</string>
    <string name="done_action">Передано клиенту</string>
    <plurals name="guests">
        <item quantity="one">%d guest</item>
        <item quantity="other">%d guests</item>
    </plurals>

</resources>
